--- a/package.json
+++ b/package.json
@@ -86,17 +86,17 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start-internal": "sass --watch src/styles/scss:src/styles/css | PORT=3000 node scripts/start.js",
-    "build": "REACT_APP_GRAPHQL_ENDPOINT=__ENDPOINT__ node scripts/build.js",
+    "start-internal": "sass --watch src/styles/scss:src/styles/css | PORT=3200 node scripts/start.js",
+    "build": "REACT_APP_GRAPHQL_ENDPOINT=https://eu1.prisma.sh/ahmed-saied/hello-world/dev node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
     "lint": "npm run lint:css && npm run lint:es",
-    "refetch-schema": "graphql-fetch-schema __ENDPOINT__",
+    "refetch-schema": "graphql-fetch-schema https://eu1.prisma.sh/ahmed-saied/hello-world/dev",
     "compile-relay": "relay-compiler  --verbose --src ./src/modules/ --schema ./schema.graphql",
     "lint:css": "stylelint './src/**/*.js*'",
     "lint:es": "eslint ./src ",
-    "start": "npm run lint:css && REACT_APP_GRAPHQL_ENDPOINT=__ENDPOINT__ npm run start-internal"
+    "start": "npm run lint:css && REACT_APP_GRAPHQL_ENDPOINT=https://eu1.prisma.sh/ahmed-saied/hello-world/dev npm run start-internal"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.4.11",
